kubernetes/apps/fission-gym/scheduled-jobs-database/network-policies.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: fission-gym-default-deny
  namespace: fission-gym
  labels:
    app.kubernetes.io/part-of: fission-gym
spec:
  podSelector:
    matchExpressions:
      - key: app.kubernetes.io/name
        operator: NotIn
        values:
          - postgresql
  policyTypes:
    - Ingress
  ingress: []
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: fission-gym-allow-router
  namespace: fission-gym
  labels:
    app.kubernetes.io/part-of: fission-gym
spec:
  podSelector:
    matchExpressions:
      - key: functionName
        operator: Exists
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: fission
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: fission-gym-allow-nats-client
  namespace: fission-gym
  labels:
    app.kubernetes.io/part-of: fission-gym
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: nats
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              functionName: fission-gym-scheduler
        - podSelector:
            matchLabels:
              app: fission-gym-worker-trigger
        - podSelector:
            matchLabels:
              app: nack
      ports:
        - protocol: TCP
          port: 4222
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: fission-gym-allow-nats-monitoring
  namespace: fission-gym
  labels:
    app.kubernetes.io/part-of: fission-gym
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: nats
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: keda
      ports:
        - protocol: TCP
          port: 8222
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: fission-gym-allow-builder-manager
  namespace: fission-gym
  labels:
    app.kubernetes.io/part-of: fission-gym
spec:
  podSelector:
    matchLabels:
      owner: buildermgr
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: fission
          podSelector:
            matchLabels:
              svc: buildermgr
      ports:
        - protocol: TCP
          port: 8000
